{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 83,
  "lineage": "40c5db34-34ee-da8f-a4fe-7d13dc14104b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ITI_NAT1_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6b28a58943491b2",
            "domain": "vpc",
            "id": "eipalloc-0c6b28a58943491b2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-70-30-59.compute-1.amazonaws.com",
            "public_ip": "52.70.30.59",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ITI_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ITI_NAT2_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aac6b36f084fd4ae",
            "domain": "vpc",
            "id": "eipalloc-0aac6b36f084fd4ae",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-208-127-3.compute-1.amazonaws.com",
            "public_ip": "44.208.127.3",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ITI_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ITI_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060389317043:internet-gateway/igw-0212f8e39fbf51a67",
            "id": "igw-0212f8e39fbf51a67",
            "owner_id": "060389317043",
            "tags": {
              "Name": "ITI_igw"
            },
            "tags_all": {
              "Name": "ITI_igw"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ITI_NAT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6b28a58943491b2",
            "connectivity_type": "public",
            "id": "nat-01a82bab4134582b7",
            "network_interface_id": "eni-0b5bf281ba1ef4af6",
            "private_ip": "10.0.1.224",
            "public_ip": "52.70.30.59",
            "subnet_id": "subnet-05cecca7e2551e2a1",
            "tags": {
              "Name": "ITI_NAT1"
            },
            "tags_all": {
              "Name": "ITI_NAT1"
            }
          },
          "dependencies": [
            "aws_eip.ITI_NAT1_EIP",
            "aws_internet_gateway.ITI_igw",
            "aws_subnet.ITI_public_subnet1",
            "aws_vpc.ITI_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ITI_NAT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aac6b36f084fd4ae",
            "connectivity_type": "public",
            "id": "nat-08a4b2ab5a020fbcc",
            "network_interface_id": "eni-0f4f0d098d70c4578",
            "private_ip": "10.0.2.229",
            "public_ip": "44.208.127.3",
            "subnet_id": "subnet-0804d5e85c1e547ba",
            "tags": {
              "Name": "ITI_NAT2"
            },
            "tags_all": {
              "Name": "ITI_NAT2"
            }
          },
          "dependencies": [
            "aws_eip.ITI_NAT2_EIP",
            "aws_internet_gateway.ITI_igw",
            "aws_subnet.ITI_public_subnet2",
            "aws_vpc.ITI_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ITI_private1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060389317043:route-table/rtb-0aa1ac9c91333b12c",
            "id": "rtb-0aa1ac9c91333b12c",
            "owner_id": "060389317043",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01a82bab4134582b7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ITI_private1_rt"
            },
            "tags_all": {
              "Name": "ITI_private1_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-068879f398abbf791"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ITI_NAT1_EIP",
            "aws_internet_gateway.ITI_igw",
            "aws_nat_gateway.ITI_NAT1",
            "aws_subnet.ITI_public_subnet1",
            "aws_vpc.ITI_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ITI_private2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060389317043:route-table/rtb-08303f9683c1d718d",
            "id": "rtb-08303f9683c1d718d",
            "owner_id": "060389317043",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08a4b2ab5a020fbcc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ITI_private2_rt"
            },
            "tags_all": {
              "Name": "ITI_private2_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-068879f398abbf791"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ITI_NAT2_EIP",
            "aws_internet_gateway.ITI_igw",
            "aws_nat_gateway.ITI_NAT2",
            "aws_subnet.ITI_public_subnet2",
            "aws_vpc.ITI_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ITI_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060389317043:route-table/rtb-04fb4f7150a5cdfc1",
            "id": "rtb-04fb4f7150a5cdfc1",
            "owner_id": "060389317043",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0212f8e39fbf51a67",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ITI_public_rt"
            },
            "tags_all": {
              "Name": "ITI_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-068879f398abbf791"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ITI_igw",
            "aws_vpc.ITI_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ITI_private1_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0137b2d98c7fc0dfb",
            "route_table_id": "rtb-0aa1ac9c91333b12c",
            "subnet_id": "subnet-0a21c99be95dedcfe"
          },
          "dependencies": [
            "aws_eip.ITI_NAT1_EIP",
            "aws_internet_gateway.ITI_igw",
            "aws_nat_gateway.ITI_NAT1",
            "aws_route_table.ITI_private1_rt",
            "aws_subnet.ITI_private_subnet1",
            "aws_subnet.ITI_public_subnet1",
            "aws_vpc.ITI_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ITI_private2_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca71b4e3c368ed87",
            "route_table_id": "rtb-08303f9683c1d718d",
            "subnet_id": "subnet-0f67403ff56f0e359"
          },
          "dependencies": [
            "aws_eip.ITI_NAT2_EIP",
            "aws_internet_gateway.ITI_igw",
            "aws_nat_gateway.ITI_NAT2",
            "aws_route_table.ITI_private2_rt",
            "aws_subnet.ITI_private_subnet2",
            "aws_subnet.ITI_public_subnet2",
            "aws_vpc.ITI_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ITI_public1_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce37af3603c82992",
            "route_table_id": "rtb-04fb4f7150a5cdfc1",
            "subnet_id": "subnet-05cecca7e2551e2a1"
          },
          "dependencies": [
            "aws_internet_gateway.ITI_igw",
            "aws_route_table.ITI_public_rt",
            "aws_subnet.ITI_public_subnet1",
            "aws_vpc.ITI_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ITI_public2_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efea5af04e49b5c7",
            "route_table_id": "rtb-04fb4f7150a5cdfc1",
            "subnet_id": "subnet-0804d5e85c1e547ba"
          },
          "dependencies": [
            "aws_internet_gateway.ITI_igw",
            "aws_route_table.ITI_public_rt",
            "aws_subnet.ITI_public_subnet2",
            "aws_vpc.ITI_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ITI_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060389317043:subnet/subnet-0a21c99be95dedcfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a21c99be95dedcfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060389317043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITI_private_subnet1"
            },
            "tags_all": {
              "Name": "ITI_private_subnet1"
            },
            "vpc_id": "vpc-068879f398abbf791"
          },
          "dependencies": [
            "aws_vpc.ITI_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ITI_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060389317043:subnet/subnet-0f67403ff56f0e359",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f67403ff56f0e359",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060389317043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITI_private_subnet2"
            },
            "tags_all": {
              "Name": "ITI_private_subnet2"
            },
            "vpc_id": "vpc-068879f398abbf791"
          },
          "dependencies": [
            "aws_vpc.ITI_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ITI_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060389317043:subnet/subnet-05cecca7e2551e2a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cecca7e2551e2a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060389317043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITI_public_subnet1"
            },
            "tags_all": {
              "Name": "ITI_public_subnet1"
            },
            "vpc_id": "vpc-068879f398abbf791"
          },
          "dependencies": [
            "aws_vpc.ITI_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ITI_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060389317043:subnet/subnet-0804d5e85c1e547ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0804d5e85c1e547ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060389317043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITI_public_subnet2"
            },
            "tags_all": {
              "Name": "ITI_public_subnet2"
            },
            "vpc_id": "vpc-068879f398abbf791"
          },
          "dependencies": [
            "aws_vpc.ITI_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ITI_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060389317043:vpc/vpc-068879f398abbf791",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034a1c2612d093bea",
            "default_route_table_id": "rtb-069ac04460616aa5b",
            "default_security_group_id": "sg-0d0ccb4e00e4f8b2d",
            "dhcp_options_id": "dopt-0c46cc644a332f230",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-068879f398abbf791",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069ac04460616aa5b",
            "owner_id": "060389317043",
            "tags": {
              "Name": "ITI_VPC"
            },
            "tags_all": {
              "Name": "ITI_VPC"
            }
          }
        }
      ]
    }
  ]
}